--- a/statistics/weights-definition/index.qmd
+++ b/statistics/weights-definition/index.qmd
@@ -41,7 +41,7 @@ Importance weights are different from the other types. Lumley provides a good ex
 
 Additionally, I introduced a fifth category -- adjustment weights -- marked in an orange box. Adjustment weights are often used to rectify discrepancies between the sample and the population, addressing issues such as respondent attrition and non-response through techniques like post-stratification and raking. You might also have heard of terms like ["longitudinal weights" or "cross-sectional weights"](https://www.understandingsociety.ac.uk/documentation/mainstage/user-guides/main-survey-user-guide/longitudinal-and-cross-sectional-weights/#:~:text=Unlike%20in%20a%20cross%2Dsectional,used%20cross%2Dsectionally%20years%20later.) which often appeared in public health research. These terms fall under the umbrella of adjustment weights. While adjustment weights typically complement sampling weights, they can extend to non-probability samples as well.
 
-Below I turn to each type of weight using the California Academic Performance Index data from the `survey` package. We'll work with the `apistrat` dataset, a stratified random sample of 200 schools where sampling weights are included (`pw`). Our goal is to analyze the relationship between academic performance in the year 2000 (`api00`) and percentage of economically disadvantaged students (`meals`).
+Below I turn to each type of weight using the California Academic Performance Index data from the `survey` package. We'll work with the `apisrs` dataset, a simple random sample of 200 schools where sampling weights are included (`pw`). Our goal is to analyze the relationship between academic performance in the year 2000 (`api00`) and percentage of economically disadvantaged students (`meals`).
 
 ### Sampling weights
 
@@ -57,14 +57,12 @@ options(survey.lonely.psu = "adjust")
 options(survey.adjust.domain.lonely = TRUE)
 
 # Define the survey design
-strat.design <- svydesign(id =~ 1, # no clustering (all data has equal PSU)
-                          strata = ~stype, # stratification variable
-                          weights = ~pw, # sampling weights
-                          data = apistrat)
+srs.design <- svydesign(id =~ 1, # no clustering (all data has equal PSU)
+                        weights = ~pw, # sampling weights
+                        data = apisrs)
 
 # Run a linear regression with sampling weights
-ols_sampling_weights <- svyglm(api00 ~ meals, design = strat.design)
-summary(ols_sampling_weights)
+ols_sampling_weights <- svyglm(api00 ~ meals, design = srs.design)
 ```
 
 ### Precision weights
@@ -73,17 +71,16 @@ We manually create precision weights and incorporate them in the `weights=` argu
 
 ```{r}
 # Fit a traditional OLS model
-ols <- glm(api00 ~ meals, data = apistrat)
+ols <- glm(api00 ~ meals, data = apisrs)
 
 # Estimate variance (assuming variance of residuals might depend on the magnitude of fitted values)
-ols_var <- glm(I(residuals(ols)^2) ~ fitted(ols), data = apistrat)
+ols_var <- glm(I(residuals(ols)^2) ~ fitted(ols), data = apisrs)
 
 # Compute precision weights as the inverse of the estimated variance
 precision_weights <- 1 / fitted(ols_var)
 
 # Fit the weighted least squares model
-ols_precision_weights <- glm(api00 ~ meals, data = apistrat, weights = precision_weights)
-summary(ols_precision_weights)
+ols_precision_weights <- glm(api00 ~ meals, data = apisrs, weights = precision_weights)
 ```
 
 ### Frequency weights
@@ -94,15 +91,35 @@ Assuming we want to store data at the student level rather than the school level
 set.seed(123)
 
 # For simplicity, assume the number of students per school ranges from 1 to 3
-apistrat$frequency_weights <- sample(1:3, size = nrow(apistrat), replace = TRUE)
+apisrs$frequency_weights <- sample(1:3, size = nrow(apisrs), replace = TRUE)
 
 # Construct individual-level dataset
-apistrat_individual <- apistrat %>%
+apisrs_individual <- apisrs %>%
   uncount(weights = frequency_weights, .id = "cds")
 
 # Run a linear model on the uncompressed data
-ols_frequency_weights <- glm(api00 ~ meals, data = apistrat_individual)
-summary(ols_frequency_weights)
+ols_frequency_weights <- glm(api00 ~ meals, data = apisrs_individual)
+```
+
+### Adjustment weights
+
+Assume that our data is from a simple random sample
+
+```{r}
+# Assume we know population totals for each school type
+pop_totals <- data.frame(
+  stype = c("E", "M", "H"),
+  Freq = c(5000, 3000, 2000)  # hypothetical population sizes for Elementary, Middle, High
+)
+
+# Post-stratification
+post_design <- postStratify(srs.design, strata = ~stype, population = pop_totals)
+
+# Extract the post-stratified weights
+adjusted_weights <- weights(post_design)
+
+# Update the original design with new weights
+srs.design.updated <- update(srs.design, weights = adjusted_weights)
 ```
 
 ## Non-probability samples hold promise when paired with careful weighting
@@ -117,33 +134,9 @@ Selecting appropriate variables for weighting is crucial. For instance, Lohr and
 
 Identifying a suitable auxiliary variable for weighting is not always straightforward. Gelman's [project](https://www.washingtonpost.com/news/monkey-cage/wp/2014/04/09/tracking-public-opinion-with-biased-polls/) using an opt-in poll from the Xbox gaming platform before the 2012 presidential election. This sample was unrepresentative, skewed towards younger and more male respondents. Gelman and his team chose to use party ID to reweight the data. Partisanship is not often used for weighting because it varies over time and is not readily available from census data where demographic variables are often chosen for weighting. Despite these challenges, the results are impressive -- the adjusted estimates aligned well with forecasts from leading poll analysts!
 
-when you have really low response rates, the probability sample might not differ much from a non-probability convience sample. Moreover, many weighting techniques come into play that could make the non-probability produce accurate and reliable estimates. The magic sparks on which variable you choose to weight your sample. For the Literary Digest example, Lohr and Brick (2017) finds that if votes cast in 1932 was used to weight the results, the poll would have predicted a majority of electoral votes for Roosevelt in 1936.
-
-positive example of statistical adjustments
-
-opt-in samples or other convience samples, use weighting to correct for lack of representativeness, Gelman's xbox project, using opt-in poll from the Xbox gaming platform during the month or so before the 2012 presidential election - Gelman uses party ID to reweight the data, determining which variables to incorporate to weight on is tricky and can be controversial, Gelman uses party ID to reweight the xbox data because this is not fixed and cannot be pulled from census like other demographic characteristics.
-
-The Literary Digest example
-
 ## Weighting does not solve everything
 
-Weighting is not a solution to every problem.
-
-```{r}
-data <- data.frame(id = 1:5,
-                   Q1 = c(2,4,1,3,5),
-                   Q2 = c(3,3,2,5,5),
-                   Q3 = c(1,4,5,5,2))
-data <- data %>%
-  mutate(weight = ifelse(id == 3 | id == 4, 1.5, 1)) %>%
-  mutate(
-    across(.cols = Q1:Q3, .fns = ~ .x * weight, .names = "{.col}_weighted")
-  )
-
-mean(data$Q1)
-mean(data$Q1_weighted)
- 
-```
+Despite the amazing power that weighting can bring in, it is not a solution to every problem.
 
 ## Unweighted data can be preferred to weighted data
 
@@ -157,8 +150,6 @@ To weight or not to weight, here are some considerations:
 
 -   Sharon L. Lohr and J. Michael Brick, 2017. "Roosevelt Predicted to Win: Revisiting the 1936 Literary Digest Poll". Statistical, Politics and Policy, 8(1): 65-84.
 
--   A wonderful twitter [thread](https://twitter.com/WomenInStat/status/1285612667839885312) on SVD by Daniela Witten (a nice summary can be found [here](https://www.govindgnair.com/post/svd-is-almost-all-you-need/))
+-   Thomas Lumley, 2024. "[Importance weights](https://notstatschat.rbind.io/2024/04/19/importance-weights/)"
 
--   A cool geometric [interpretation](https://www.youtube.com/watch?v=vSczTbgc8Rc) of SVD
-
--   A nice [tutorial](https://www.youtube.com/watch?v=lRZ4aMaXPBI&list=PLtmWHNX-gukKocXQOkQjuVxglSDYWsSh9&index=3) illustrating the connection between SVD and topic modeling using Python
+-   Thomas Lumley, 2020. "[Weights in statistics](https://notstatschat.rbind.io/2020/08/04/weights-in-statistics/)"
